--- a/index.html
+++ b/index.html
@@ -11,15 +11,16 @@
   <body>
     <div class="side-nav-menu min-vh-100 position-fixed d-flex top-0">
       <div
+        id="navToggle"
         class="nav-tab d-flex flex-column justify-content-between min-vh-100 p-4"
       >
         <div class="links">
           <ul class="list-unstyled overflow-hidden">
-            <li class="py-2 position-relative cursor-pointer">Search</li>
-            <li class="py-2 position-relative cursor-pointer">Categories</li>
-            <li class="py-2 position-relative cursor-pointer">Area</li>
-            <li class="py-2 position-relative cursor-pointer">Ingredients</li>
-            <li class="py-2 position-relative cursor-pointer">Contact Us</li>
+            <li class="py-2  cursor-pointer">Search</li>
+            <li class="py-2  cursor-pointer">Categories</li>
+            <li class="py-2  cursor-pointer">Area</li>
+            <li class="py-2  cursor-pointer">Ingredients</li>
+            <li class="py-2  cursor-pointer">Contact Us</li>
           </ul>
         </div>
         <div class="nav-footer">
@@ -34,10 +35,12 @@
         </div>
       </div>
       <div
-        class="nav-header d-flex flex-column justify-content-between py-4 text-center px-2 bg-white text-black"
+        class="nav-header ms-5 vh-100 z-3 d-flex flex-column justify-content-between py-4 text-center px-2 bg-white text-black"
       >
         <img class="logo" src="images/logo.png" alt="logo" />
-        <i class="fa-solid open-close-icon fa-align-justify fa-2x"></i>
+        <button class="border-0 btn" id="btnToggle">
+          <i class="fa-solid open-close-icon fa-align-justify fa-2x"></i>
+        </button>
         <div>
           <i class="fa-solid fa-globe d-block"></i>
           <i class="fa-solid fa-share-nodes"></i>
@@ -56,7 +59,7 @@
     </div>
 
     <script src="js/jquery-3.7.1.min.js"></script>
-    <script  src="js/bootstrap.bundle.min.js"></script> 
-    <script  src="js/index.js"></script>
+    <script src="js/bootstrap.bundle.min.js"></script>
+    <script src="js/index.js"></script>
   </body>
 </html>
